--- a/trunk/latex/ods-ptbr.tex
+++ b/trunk/latex/ods-ptbr.tex
@@ -3,6 +3,7 @@
 \usepackage{framed}
 \setlength{\FrameSep}{0mm}
 
+\usepackage{ucs}
 \usepackage[brazil]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -196,7 +197,7 @@
 % Title page content
 \title{Estruturas de Dados Abertas(em \lang)}
 \author{Pat Morin\\
-	tradução para o o português do Brasil: João Araujo}
+	tradução e adaptação para o português do Brasil:\\ João Araujo}
 \date{%
 Edição 0.1G \cpponly{$\beta$}\pcodeonly{$\beta$}
 \htmlonly{\\ \includegraphics[scale=0.90909,scale=0.5]{images/cc-by}}\\
