--- a/trunk/latex/scapegoat-ptbr.tex
+++ b/trunk/latex/scapegoat-ptbr.tex
@@ -7,7 +7,7 @@ Uma vez que a culpa esteja firmemente estabelecida, podemos deixar o bode expiat
 
 Uma #ScapegoatTree# se mantém equilibrada por meio de operações de \emph{reconstrução parcial}.
 \index{reconstrução parcial}%
-\index{árvore de busca binária!reconstrução parcial}%
+\index{arvore@árvore de busca binária!reconstrução parcial}%
 Durante uma operação de reconstrução parcial, uma subárvore inteira é desconstruída e reconstruída em uma subárvore perfeitamente equilibrada. Há muitas maneiras de reconstruir uma subárvore com raiz no nó #u# em uma árvore perfeitamente equilibrada. Um dos mais simples é percorrer a subárvore de #u#, reunindo todos os nós em um array, #a# e, em seguida, criar recursivamente uma subárvore equilibrada usando #a#. Se fizermos $#m#=#a.length#/2$, então o elemento #a[m]# se tornará a raiz da nova subárvore, $#a#[0],\ldots,#a#[#m#-1]$ são armazenados recursivamente na subárvore esquerda e $#a#[#m#+1],\ldots,#a#[#a.length#-1]$ são armazenados recursivamente na subárvore direita.
 \codeimport{ods/ScapegoatTree.rebuild(u).packIntoArray(u,a,i).buildBalanced(a,i,ns)}
 Uma chamada para #rebuild(u)# leva um tempo $O(#size(u)#)$. A subárvore resultante tem altura mínima; não há árvore de altura menor que tenha #size(u)# nós.
@@ -197,8 +197,8 @@ O seguinte teorema resume o desempenho da estrutura de dados #ScapegoatTree#:
 
 \section{Discussão e Exercícios}
 
-O termo \emph {árvore scapegoat} é creditado a Galperin e Rivest \cite{gr93}, que definem e analisam essas árvores. No entanto, a mesma estrutura foi descoberta anteriormente por Andersson \cite{a89, a99}, que as chamou de \emph{árvores balanceadas em geral}, 
-\index{general balanced tree}%
+O termo \emph {árvore scapegoat} é creditado a Galperin e Rivest \cite{gr93}, que definem e analisam essas árvores. No entanto, a mesma estrutura foi descoberta anteriormente por Andersson \cite{a89, a99}, que as chamou de \emph{árvores balanceadas geral}, 
+\index{arvore@árvore balanceada geral}%
 já que elas podem ter qualquer forma desde que sua altura seja pequena.
 
 Teste experimentais com a implementação da #ScapegoatTree# revelará que ela é consideravelmente mais lenta que as outras implementações de #SSet# neste livro. Isso pode ser um pouco surpreendente, já que a altura limitada a
